--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "Piyanatn/dkproject",
+    "description": "EMR Online",
+    "keywords": ["Online", "EMR", "hosxp", "EMR Online"],
+    "homepage": "http://www.dev2pro.com/",
     "type": "project",
     "license": "BSD-3-Clause",
     "support": {
