--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Piyanatn/dkproject",
+    "name": "piyanatn/dkproject",
     "description": "EMR Online",
     "keywords": ["Online", "EMR", "hosxp", "EMR Online"],
     "homepage": "http://www.dev2pro.com/",
